# chess-notation-parser

./: Cargo.toml  README.md
src/: castling.rs  flag.rs  lib.rs  move.rs  parser.rs  piece.rs  square.rs
tests/: integration_test.rs
