[package]
name = "chess-notation-parser"
version = "0.2.2"
edition = "2021"
authors = ["Rqnsom"]
repository = "https://github.com/Rqnsom/chess-notation-parser"
description = "Algebraic chess notation parser"
documentation = "https://docs.rs/chess-notation-parser/"
keywords = ["chess", "chess-notation"]
license = "MIT"
readme = "README.md"

[dependencies]
